<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_content_petprocurase_achados"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="8dp"
    android:paddingLeft="8dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/lbl_tv_tit_dialog_content_petprocurase"/>

            <LinearLayout
                android:id="@+id/ll_dialog_petprocurase_dt_fato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:orientation="horizontal">

                <TextView
                    style="?android:textAppearance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".4"
                    android:gravity="center_vertical"
                    android:background="@color/colorBackgroud"
                    android:text="@string/lbl_tit_dialog_petprocurase_dt_fato" />

                <EditText android:id="@+id/ed_dialog_petprocurase_dt_fato"
                    style="?android:textAppearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:gravity="center"
                    android:hint="@string/ed_dialog_petprocurase_dt_fato" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:orientation="horizontal">

                <TextView
                    style="?android:textAppearance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".4"
                    android:gravity="center_vertical"
                    android:background="@color/colorBackgroud"
                    android:text="@string/lbl_tit_dialog_petprocurase_local" />

                <EditText android:id="@+id/ed_dialog_petprocurase_local"
                    style="?android:textAppearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:gravity="center_horizontal"
                    android:hint="@string/ed_dialog_petprocurase_local" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:orientation="horizontal">

                <TextView
                    style="?android:textAppearance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".4"
                    android:gravity="center_vertical"
                    android:background="@color/colorBackgroud"
                    android:text="@string/lbl_tit_dialog_petprocurase_raca" />

                <EditText android:id="@+id/ed_dialog_petprocurase_raca"
                    style="?android:textAppearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:gravity="center_horizontal"
                    android:hint="@string/ed_dialog_petprocurase_raca" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:orientation="horizontal">

                <TextView
                    style="?android:textAppearance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".4"
                    android:gravity="center_vertical"
                    android:background="@color/colorBackgroud"
                    android:text="@string/lbl_tit_dialog_petprocurase_porte" />

                <EditText android:id="@+id/ed_dialog_petprocurase_porte"
                    style="?android:textAppearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:gravity="center_horizontal"
                    android:hint="@string/ed_dialog_petprocurase_porte" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:orientation="horizontal">

                <TextView
                    style="?android:textAppearance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".4"
                    android:gravity="center_vertical"
                    android:background="@color/colorBackgroud"
                    android:text="@string/lbl_tit_dialog_petprocurase_especie" />

                <EditText android:id="@+id/ed_dialog_petprocurase_especie"
                    style="?android:textAppearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:gravity="center_horizontal"
                    android:hint="@string/ed_dialog_petprocurase_especie" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:orientation="horizontal">

                <TextView
                    style="?android:textAppearance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".4"
                    android:gravity="center_vertical"
                    android:background="@color/colorBackgroud"
                    android:text="@string/lbl_tit_dialog_petprocurase_sexo" />

                <EditText android:id="@+id/ed_dialog_petprocurase_sexo"
                    style="?android:textAppearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:gravity="center_horizontal"
                    android:hint="@string/ed_dialog_petprocurase_sexo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_dialog_petprocurase_cancelar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:text="@string/lbl_btn_cancelar" />
                <Button
                    android:id="@+id/btn_dialog_petprocurase_pesquisar"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_btn_pesquisar" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
