<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_item_petbook_msg_imagem"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:src="@drawable/ic_mn_pet_avatar_64dp" />

        <TextView
            android:id="@+id/tv_item_petbook_msg_titulo"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:text="@string/tv_item_petbook_msg_titulo" />

        <TextView
            android:id="@+id/tv_item_petbook_msg_dt_reg"
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:text="@string/tv_item_petbook_msg_dt_reg" />


        <TextView
            android:id="@+id/tv_item_petbook_msg_texto"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/tv_item_petbook_msg_texto" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_dialog_petbook_likes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_premio_users" />

        <ImageView
            android:id="@+id/btn_dialog_petfeira_voltar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_not_assigned" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_item_petbook_detalhe_likes"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_item_petbook_detalhe_likes" />

        <TextView
            android:id="@+id/tv_item_petbook_detalhe_views"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_item_petbook_detalhe_views" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_dialog_petbook_voltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_btn_voltar" />

</LinearLayout>