<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_item_petbook_avatar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/lbl_item_petbook_avatar"
            android:src="@drawable/ic_mn_pet_avatar_64dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="2dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_petbook_nome"
                style="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/tv_item_petbook_nome"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_petbook_date"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/tv_item_petbook_date" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_item_petbook_msg_imagem"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:src="@drawable/ic_mn_pet_avatar_64dp" />

        <TextView
            android:id="@+id/tv_item_petbook_msg_titulo"
            style="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:paddingLeft="4dp"
            android:text="@string/tv_item_petbook_msg_titulo" />

        <TextView
            android:id="@+id/tv_item_petbook_msg_texto"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_item_dash_msg_titulo"
            android:layout_marginBottom="2dp"
            android:paddingLeft="4dp"
            android:text="@string/tv_item_petbook_msg_texto" />

    </LinearLayout>

</LinearLayout>