<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/item_petprocurase_achados_grid_image"
        android:layout_width="240dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_logo_achadoseperdidos" >
    </ImageView>

    <TextView
        android:id="@+id/item_petprocurase_achados_grid_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="?android:textAppearance"
        android:text="@string/lbl_item_petprocurase_achados_grid_descricao">
    </TextView>
    <TextView
        android:id="@+id/item_petprocurase_achados_grid_local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        style="?android:textAppearanceMedium"
        android:text="@string/lbl_item_petprocurase_achados_grid_local">
    </TextView>
    <TextView
        android:id="@+id/item_petprocurase_achados_grid_dta_achado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="?android:textAppearance"
        android:text="@string/lbl_item_petprocurase_achados_grid_dta_achado">
    </TextView>
</LinearLayout>