<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.itm.mobile.petlover.MainActivity"
    tools:showIn="@layout/activity_main_petsaude"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_mn_petsaude_dicas_mkt"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/ic_banner_mkt_340_150"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/mn_petsaude_dicas"
        style="?android:textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/menu_margin_mn"
        android:background="@color/colorBackgroud"
        android:drawableLeft="@drawable/ic_mn_pet_64dp"
        android:padding="@dimen/menu_padding"
        android:text="@string/mn_petsaude_dicas"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mn_petsaude_carteirinha"
        style="?android:textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/menu_margin_mn"
        android:background="@color/colorBackgroud"
        android:drawableLeft="@drawable/ic_mn_pet_64dp"
        android:padding="@dimen/menu_padding"
        android:text="@string/mn_petsaude_carteirinha"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mn_petsaude_clinicas"
        style="?android:textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/menu_margin_mn"
        android:background="@color/colorBackgroud"
        android:drawableLeft="@drawable/ic_mn_pet_64dp"
        android:padding="@dimen/menu_padding"
        android:text="@string/mn_petsaude_clinicas"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mn_petsaude_veterinarios"
        style="?android:textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/menu_margin_mn"
        android:background="@color/colorBackgroud"
        android:drawableLeft="@drawable/ic_mn_pet_64dp"
        android:padding="@dimen/menu_padding"
        android:text="@string/mn_petsaude_veterinarios"
        android:textStyle="bold" />

</LinearLayout>
